--- a/moviesearch_app/src/css/navbar.css
+++ b/moviesearch_app/src/css/navbar.css
@@ -1,73 +1,87 @@
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+
 .navbar {
-    background-color: #060b26;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+  background-color: #030617;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu-bars {
-    margin-left: 2rem;
-    font-size:2rem;
-    background: none;
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
 }
 
 .nav-menu {
-    background-color:  #060b26;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top:0;
-    left: -100%;
-    transition: 850ms;
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+  position: absolute;
+  z-index: 1;
 }
 
 .nav-menu.active {
-    left: 0;
-    transition: 350ms;
+  left: 0;
+  transition: 350ms;
 }
 
 .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 60px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
 }
 
 .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
 }
 
 .nav-text a:hover {
-    background-color: #1a83ff;
+  background-color: #1a83ff;
 }
 
 .nav-menu-items {
-    padding-top: 1.9rem;
-    width: 100%;
+  padding-top: 1.9rem;
+  width: 100%;
 }
 
 .nav-toggle {
-    background-color: #060b26;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+  background-color: #060b26;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
-span{
-    margin-left: 16px;
+span {
+  margin-left: 16px;
 }
+
+.logo {
+  width: 9vw;
+  height: 14vh;
+  padding-bottom: 8px;
+  padding-right: 20px;
+}
+
+/* .logo-span {
+} */
