--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 /* #slider {
-  width: 80vw;
+  width: 100vw;
   max-width: 60%;
   display: flex;
   justify-content: center;
@@ -22,7 +22,7 @@ body {
 .img-slider {
   width: 100vw;
   height: 70vh;
-  /* border-radius: 20px; */
+  border-radius: 20px;
   position: relative;
   z-index: 0;
 }
