--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -11,18 +11,15 @@ body {
   background-color: #030617;
 }
 
-/* #slider {
-  width: 100vw;
-  max-width: 60%;
+.slider {
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
 
 .img-slider {
   width: 100vw;
-  height: 70vh;
-  border-radius: 20px;
+  height: 80vh;
   position: relative;
   z-index: 0;
 }
