--- a/moviesearch_app/src/css/navbar.css
+++ b/moviesearch_app/src/css/navbar.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 
 .navbar {
   background-color: #030617;
@@ -82,6 +82,3 @@ span {
   padding-bottom: 8px;
   padding-right: 20px;
 }
-
-/* .logo-span {
-} */
