--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -62,7 +62,7 @@ h1 {
 .searchInput{
   background-color: rgba(238, 237, 237, 0.993);
   color: #030617;
-  border-radius: 30px;
+  border-radius: 30px;}
 
 .series {
   font-family: Source Sans Pro, sans-serif;
