--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -53,7 +53,6 @@ ul.social li {
 ul.social a:hover {
   color: #62adeb;
 }
-=======
 .searchbar {
   border-radius: 30px;
 }
@@ -110,3 +109,9 @@ ul.social a:hover {
   font-size: 2rem;
 
 }
+
+.modalImg{
+  margin: 0 auto;
+  width: 25vw;
+}
+
