added dropdown to categories & changed modal

--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -31,7 +31,7 @@ h1 {
   text-align: center;
 }
 
-/* Footer */
+/* Footer Start */
 
 footer {
   background-color: #030617;
@@ -53,6 +53,8 @@ ul.social li {
 ul.social a:hover {
   color: #62adeb;
 }
+
+/* Footer End */
 
 .searchbar {
   border-radius: 30px;
@@ -85,12 +87,8 @@ ul.social a:hover {
 .searchInput {
   background-color: rgba(238, 237, 237, 0.993);
   color: #030617;
-
-  border-radius: 30px;}
-
   border-radius: 30px;
 }
-
 
 .series {
   font-family: Source Sans Pro, sans-serif;
@@ -101,7 +99,7 @@ ul.social a:hover {
 .seriesBtnGroup {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .seriesNavbar {
@@ -115,8 +113,13 @@ ul.social a:hover {
   font-size: 2rem;
 }
 
-.modalImg{
+/* Modal */
+.modalImg {
   margin: 0 auto;
-  width: 25vw;
+  width: 25rem;
+  height: 22rem;
 }
 
+/* .modal {
+  background-color: blue;
+} */
