--- a/moviesearch_app/src/css/navbar.css
+++ b/moviesearch_app/src/css/navbar.css
@@ -5,7 +5,7 @@
   height: 80px;
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
 }
 
 .menu-bars {
@@ -25,7 +25,7 @@
   left: -100%;
   transition: 850ms;
   position: absolute;
-  z-index: 2;
+  z-index: 100;
 }
 
 .nav-menu.active {
@@ -79,8 +79,6 @@ span {
 .logo {
   width: 9vw;
   height: 14vh;
-  padding-bottom: 8px;
-  padding-right: 20px;
+  padding-bottom: 1.26vh;
+  padding-right: 1.55vw;
 }
-
-
