--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -53,16 +53,15 @@ ul.social li {
 ul.social a:hover {
   color: #62adeb;
 }
-=======
-.searchbar {
+ .searchbar {
   border-radius: 30px;
 }
 
-.objectfit{
+.objectfit {
   object-fit: cover;
 }
 
-.cardBodyColor{
+.cardBodyColor {
   background-color: #030617;
   color: white;
 }
@@ -71,26 +70,27 @@ ul.social a:hover {
   height: 1rem;
 }
 
-.cardBorder{
+.cardBorder {
   border: 4px oldlace outset;
   /* box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2); */
-  box-shadow: 2px 2px red, -1em 0 .4em olive;
+  box-shadow: 2px 2px red, -1em 0 0.4em olive;
 }
 
-.button{
+.button {
   font-weight: 600;
   font-size: 1.5rem;
 }
 
-.searchInput{
+.searchInput {
   background-color: rgba(238, 237, 237, 0.993);
   color: #030617;
-  border-radius: 30px;}
+  border-radius: 30px;
+}
 
 .series {
   font-family: Source Sans Pro, sans-serif;
   font-size: 1.7rem;
-  padding : 24px 24px 20px 10px;
+  padding: 24px 24px 20px 10px;
 }
 
 .seriesBtnGroup {
@@ -108,5 +108,14 @@ ul.social a:hover {
 .navbarTitle {
   font-family: Source Sans Pro, sans-serif;
   font-size: 2rem;
-
 }
+.fav-icon:hover {
+  cursor: pointer;
+}
+.fav-icon{
+  font-size: 2.8vw;
+}
+.bookmark-icon{
+  font-size: 2.8vw;
+}
+ 
