--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -64,6 +64,8 @@ ul.social a:hover {
 .cardBodyColor{
   background-color: #030617;
   color: white;
+  text-align: center;
+
 }
 
 .cardTitleHeight {
@@ -113,5 +115,10 @@ ul.social a:hover {
 .modalImg{
   margin: 0 auto;
   width: 25vw;
+  
+}
+
+.modalFooter{
+  margin: 0 auto;
 }
 
