--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -78,8 +78,6 @@ ul.social a:hover {
 }
 
 .cardBorder {
-  border: 4px oldlace outset;
-
   /* box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2); */
 
   /* box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2); */
@@ -126,7 +124,7 @@ ul.social a:hover {
   cursor: pointer;
 }
 .fav-icon{
-  font-size: 2.8vw;
+  font-size: 2vw;
 }
 .bookmark-icon{
   font-size: 2.8vw;
@@ -145,8 +143,6 @@ ul.social a:hover {
 
 .modalFooter{
   margin: 0 auto;
-  width: 25rem;
-  height: 22rem;
 
 }
 
@@ -154,3 +150,6 @@ ul.social a:hover {
   background-color: blue;
 } */
 
+.cardTiTleFont{
+  font-size: 16px;
+}
