--- a/moviesearch_app/src/css/navbar.css
+++ b/moviesearch_app/src/css/navbar.css
@@ -2,10 +2,10 @@
 
 .navbar {
   background-color: #030617;
-  height: 80px;
+  /* height: 80px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
 }
 
 .menu-bars {
@@ -16,7 +16,7 @@
 
 .nav-menu {
   background-color: #060b26;
-  width: 250px;
+  width: 16rem;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 8px 0px 8px 16px;
+  padding: 0.2rem 0rem 0rem 1rem;
   list-style: none;
   height: 60px;
 }
@@ -63,22 +63,44 @@
   width: 100%;
 }
 
-.nav-toggle {
+/* .navbar-toggle {
   background-color: #060b26;
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
+} */
+
+.nav-menu-icon {
+  margin-bottom: 1rem;
 }
 
 span {
-  margin-left: 16px;
+  margin-left: 1.5rem;
 }
 
-.logo {
+/* .logo {
   width: 9vw;
   height: 14vh;
   padding-bottom: 1.26vh;
   padding-right: 1.55vw;
+} */
+
+.navbar-title {
+  font-size: 3rem;
+  color: white;
+  margin-bottom: -2rem;
+}
+
+.logo {
+  max-width: 4rem;
+  margin-bottom: 1rem;
+  margin-right: 0.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar-title {
+    display: none;
+  }
 }
