--- a/moviesearch_app/src/css/style.css
+++ b/moviesearch_app/src/css/style.css
@@ -25,10 +25,14 @@ body {
 }
 
 h1 {
-  color: rgb(238, 248, 248);
   font-family: Courgette;
   font-size: 2.4rem;
   text-align: center;
+}
+
+h1,
+h3 {
+  color: rgb(238, 248, 248);
 }
 
 /* Footer Start */
@@ -54,13 +58,13 @@ ul.social a:hover {
   color: #62adeb;
 }
 
- .searchbar {
-
+.footer-text {
+  font-size: 1.2rem;
+}
 
 /* Footer End */
 
 .searchbar {
-
   border-radius: 30px;
 }
 
@@ -72,7 +76,6 @@ ul.social a:hover {
   background-color: #030617;
   color: white;
   text-align: center;
-
 }
 
 .cardTitleHeight {
@@ -121,19 +124,15 @@ ul.social a:hover {
 .navbarTitle {
   font-family: Source Sans Pro, sans-serif;
   font-size: 2rem;
-
 }
 .fav-icon:hover {
   cursor: pointer;
 }
-.fav-icon{
+.fav-icon {
   font-size: 2.8vw;
 }
-.bookmark-icon{
+.bookmark-icon {
   font-size: 2.8vw;
-}
- 
-
 }
 
 /* Modal */
@@ -141,18 +140,15 @@ ul.social a:hover {
   margin: 0 auto;
 
   width: 25vw;
-  
 }
 
-.modalFooter{
+.modalFooter {
   margin: 0 auto;
 
   width: 25rem;
   height: 22rem;
-
 }
 
 /* .modal {
   background-color: blue;
 } */
-
